--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"nodemon ./backend/index\""
+    "start": "concurrently \"react-scripts start\" \"nodemon ./backend/index\""
   },
   "eslintConfig": {
     "extends": [
