--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start":"react-scripts start"
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "concurrently \"react-scripts start\" \"nodemon ./backend/index\""
+    "both": "concurrently \"npm run start\" \"nodemon ./backend/index\""
   },
   "eslintConfig": {
     "extends": [
